# llama_sdk

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  update-submodules.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/lcpp_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/maid_llm_example/: MainActivity.kt
example/ios/: ExportOptions.plist
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: lcpp.podspec  llama.podspec  llama_sdk.podspec
lib/: bindings.dart  lcpp.dart  lcpp.web.dart  llama.dart  llama_sdk.dart  llama_sdk.web.dart
lib/src/: bindings.dart  chat_message.dart  context_params.dart  library.dart  llama.dart  llama_cpp.dart  llama_cpp_native.dart  llama_exception.dart  llama_isolate_entry.dart  llama_isolated.dart  llama_native.dart  llama_params.dart  llama_worker.dart  model_params.dart  sampling_params.dart  worker_params.dart
lib/src/native/: bindings.dart  bindings_hook.dart  chat_message.dart  chat_message_extension.dart  llama.dart  llama_controller.dart  llama_controller_extension.dart  llama_isolated.dart  llama_message_extension.dart  llama_params.dart  llama_worker.dart  worker_params.dart
lib/src/params/: context_params.dart  model_params.dart  sampling_params.dart
lib/src/shared/: chat_message.dart  llama_controller.dart  llama_exception.dart  llama_message.dart
lib/src/web/: llama.dart
linux/: CMakeLists.txt
macos/: lcpp.podspec  llama.podspec  llama_sdk.podspec
scripts/: create-dmg.sh
src/: api.h  llm.cpp  params.cpp  params.hpp
windows/: CMakeLists.txt
